--- a/src/main/resources/templates/before.html
+++ b/src/main/resources/templates/before.html
@@ -30,7 +30,7 @@
 
 <!-- moneyListが空の場合 -->
 <div th:if="${moneyList == null or #lists.isEmpty(moneyList)}">
-    <p>No data available</p>
+    <p>No data avaiydgwubchyulable</p>
 </div>
 
 <div>
