--- a/src/main/resources/templates/register-complete.html
+++ b/src/main/resources/templates/register-complete.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 登録が完了しました。
-<a th:href="@{/money-backward}">初期画面に戻る!</a>
+<a th:href="@{/money-backward}">初期画面に戻る!!</a>
 </body>
 </html>
